Fix hero text positioning on safari

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -10,15 +10,19 @@
   bottom: 0;
   left: 0;
   background-color: rgba(20, 8, 8, 0.3);
-  background: rgb(2,0,36);
-background: radial-gradient(circle, rgba(1,1,8,0.6) 50%, rgba(255,255,255,0) 100%);
-  display: grid;
-  place-items: center;
+  background: rgb(2, 0, 36);
+  background: radial-gradient(
+    circle,
+    rgba(1, 1, 8, 0.6) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .titleText {
   font-weight: 900;
   font-size: 3rem;
   color: orange;
-
 }
